--- a/pages/style.css
+++ b/pages/style.css
@@ -9,15 +9,18 @@ body {
 }
 
 #warning {
-    margin-top: 1%;
     background-color: rgb(44, 44, 44);
-    color: rgb(141, 8, 8);
+    color: rgb(189, 10, 10);
     padding: 0.3%;
 }
 
 h1 {
     font-size: 40px;
     font-weight: 600;
+}
+
+.bold {
+    font-weight: bold;
 }
 
 .selected_page {
